cleaned up requirements and library dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
 Flask
-google-auth==1.6.1
-google-cloud-storage==1.13.0
-google-cloud-logging==1.8.0
-gunicorn==19.9.0
-oauth2client==4.1.3
-six==1.11.0
-requests[security]==2.20.1
-mock==2.0.0
-google-cloud-firestore==0.31.0
-grpcio==1.18.0
-#google-python-cloud-debugger==2.10
+google-auth
+google-cloud-storage
+google-cloud-logging
+gunicorn
+oauth2client
+requests[security]
+mock
+google-cloud-firestore
+grpcio
+#google-python-cloud-debugger
 flask-login
-pyjwt
-requests
 cryptography
 Werkzeug
 retrying
 Flask-SSLify
+PyJWT
